<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayoutstart"
    android:background="@color/google_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/llkelime"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:layout_marginTop="24dp"
            android:weightSum="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/tvKelime"
                 android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="fill_vertical"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@color/beyaz"
                android:gravity="center"
                android:text="@string/kelimeler"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/tvAnlamlari"
                 android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:layout_gravity="fill_vertical"
                android:layout_margin="10dp"
                android:background="@color/beyaz"
                android:text="@string/anlamlari"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnTekrar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@color/fusya"
                android:onClick="terkrar_sor"
                android:text="@string/ogrenmedim"
                android:textColor="@color/beyaz" />

            <Button
                android:id="@+id/btnOgrendim"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@color/cevab"
                android:onClick="Ilearned"
                android:text="@string/ogrendim"
                android:textColor="@color/beyaz" />
        </LinearLayout>

        <Button
            android:id="@+id/btnTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="testebasla"
            android:text="@string/teste_gec"
            android:textColor="@color/beyaz" />

    </LinearLayout>
</RelativeLayout>

